grammar.bnf
<json>        ::= <element>
<element>     ::= <object> | <array> | <string> | <number> | "true" | "false" | "null" | <calc>
<object>      ::= "{" <members>? "}"
<members>     ::= <pair> ("," <pair>)*
<pair>        ::= <string> ":" <element>
<array>       ::= "[" <elements>? "]"
<elements>    ::= <element> ("," <element>)*
<string>      ::= '"' <chars>* '"'
<number>      ::= <int> <frac>? <exp>?
<int>         ::= "-"? ("0" | [1-9][0-9]*)
<frac>        ::= "." [0-9]+
<exp>         ::= ("e"|"E") ("+"|"-")? [0-9]+

;; Extensão de cálculo
<calc>        ::= "$" <expr> "$"
<expr>        ::= <term> <expr'>
<expr'>       ::= ("+"|"-") <term> <expr'> | ε
<term>        ::= <power> <term'>
<term'>       ::= ("*"|"/") <power> <term'> | ε
<power>       ::= <factor> ("^" <power>)?
<factor>      ::= <number> | "-" <factor> | "(" <expr> ")"
